fix: address maintainer review on #725
- migrate S3 list from V1 ListObjects to ListObjectsV2 (continuationToken)
- Upload: unwrap the real cause on window failure, drop the no-op cancel
- Query: FETCH_ONE/FETCH/STORE doc and comment accuracy, getFirst, final formatters
- Consume/Publish: throw IllegalStateException, log delete failures at error
- ConnectionUtils: sync pool 200 -> 100
- List: maxKeys moved to advanced group
- add STORE pagination, V2 list pagination, and Consume delete-failure tests